# csi-tme

./: .gitignore  SESSION_HANDOFF.md  pyproject.toml
docs/: BIOBG.md  CRITICS.md  DATASETS.md  MATH.md  RESEARCH.md  TARGET_GUIDE.md  VALIDATION_NOTES.md  VALIDATION_RESULTS.md
reports/: candidate_validation_summary.csv  du_test_rbp_results.csv  du_test_rbp_summary.csv  fig1_app_source_data.csv  fig2_vcan_source_data.csv  fig3_clu_source_data.csv  final_validation_report.csv  ont_splisosm_full_results.csv  ont_splisosm_gene_summary.csv  pilot_splisosm_full_results.csv  presentation_script.md  presentation_table1_discovery.csv  presentation_table2_validation.csv  presentation_table3_regulators.csv  scrna_full_psi_differential.csv  scrna_splice_feature_gene_short_name.csv  scrna_validation_all_genes.csv  scrna_validation_corrected.csv  scrna_wilcox_diff_20_gene_short_name.csv  spacet_correlation_summary.csv  spacet_isoform_correlations.csv  sr_splisosm_full_results.csv  sr_splisosm_gene_summary.csv  validation_report.html
reports/spacet_proportions/: MGH258_proportions.csv  ZH1007inf_proportions.csv  ZH1007nec_proportions.csv  ZH1019T1_proportions.csv  ZH1019inf_proportions.csv  ZH8811Abulk_proportions.csv  ZH8811Bbulk_proportions.csv  ZH8812bulk_proportions.csv  ZH881T1_proportions.csv  ZH881inf_proportions.csv  ZH916T1_proportions.csv  ZH916bulk_proportions.csv  (+1 more)
scripts/: compare_implementations.py  comparison_results.csv  create_psi_boxplots.R  extract_scrna_validation.R  full_scrna_validation.R  generate_interactive_report.py  generate_validation_report.py  prepare_interactive_data.py  run_du_test.py  run_ont_splisosm.py  run_sr_splisosm_full.py  save_source_data_and_validate.py  spacet_deconvolution.R  spacet_extract_proportions.R  target_selection_pipeline.py  test_eigenvalue_methods.py  test_pvalue_formulations.py  test_ratios_layers.py  test_spot_filtering.py  visualize_spatial_isoform.py  visualize_spatial_isoform_switching.py  visualize_vcan_zh1019t1.py
splisosm/: __init__.py  api.py  batch.py  gene_lists.py
(+31 files in other folders)
