[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splisosm"
version = "0.1.0"
description = "Spatial Isoform Statistical Omnibus Model for detecting spatially variable isoform patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CSI-TME Project"}
]
keywords = [
    "spatial transcriptomics",
    "isoform analysis",
    "HSIC",
    "tumor microenvironment",
    "Visium",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "tqdm",
]

[project.optional-dependencies]
anndata = [
    "anndata>=0.10",
    "scanpy>=1.9",
]
gpu = [
    "cupy-cuda12x>=12.0",  # For CUDA 12.x; use cupy-cuda11x for CUDA 11.x
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
all = [
    "splisosm[anndata,gpu,dev]",
]

[project.urls]
Repository = "https://github.com/csi-tme/splisosm"

[tool.setuptools.packages.find]
where = ["."]
include = ["splisosm*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["splisosm/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
